# qdk-pythonic

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: conf.py  index.rst  requirements.txt
docs/api/: adapters.rst  analysis.rst  builders.rst  circuit.rst  codegen.rst  domains_chemistry.rst  domains_common.rst  domains_condensed_matter.rst  domains_finance.rst  domains_ml.rst  domains_optimization.rst  exceptions.rst  execution.rst  gates.rst  instruction.rst  parser.rst  qubit.rst
docs/developer_guide/: adding_domains.rst  adding_gates.rst  architecture.rst  codegen_backend.rst  parser_backend.rst  setup.rst  style.rst  testing.rst
docs/tutorials/: chemistry.rst  condensed_matter.rst  getting_started.rst  networkx_integration.rst  openqasm_interop.rst  optimization.rst  pyscf_integration.rst  quantum_finance.rst  quantum_ml.rst  quspin_integration.rst  resource_estimation.rst
docs/user_guide/: analysis.rst  circuits.rst  codegen.rst  domains.rst  errors.rst  execution.rst  interop.rst  overview.rst  parameters.rst
examples/notebooks/: 01_getting_started.ipynb  02_bell_state.ipynb  03_resource_estimation.ipynb  04_openqasm_interop.ipynb  05_ising_model.ipynb  06_circuit_builders.ipynb  07_condensed_matter.ipynb  08_optimization.ipynb  09_quantum_finance.ipynb  10_quantum_ml.ipynb  11_quspin_integration.ipynb  12_networkx_integration.ipynb  13_pyscf_integration.ipynb  14_molecular_chemistry.ipynb  15_qubitization.ipynb  README.md
examples/scripts/: README.md  bell_state.py  chemistry_h2_example.py  ghz_state.py  networkx_maxcut_scaling.py  pyscf_h2_example.py  qiskit_interop.py  quspin_ising_scaling.py  resource_sweep.py
src/qdk_pythonic/: __init__.py  builders.py  exceptions.py  registry.py
tests/: conftest.py
tests/integration/: test_chemistry_integration.py  test_end_to_end.py  (+3 more)
(+117 files in other folders)
